# sgx-fortanix-hello-world

./: Cargo.toml  run.sh
attestation_types/: Cargo.toml
attestation_types/client/: Cargo.toml
attestation_types/client/src/: lib.rs
attestation_types/enclave/: Cargo.toml
attestation_types/enclave/src/: lib.rs
attestation_types/src/: lib.rs
client/: Cargo.toml
client/src/: attestation.rs  main.rs  quoting.rs
crypto/: Cargo.toml
crypto/src/: ephemeral_diffie_hellman.rs  intel.rs  lib.rs
enclave/: Cargo.toml
enclave/src/: attestation.rs  main.rs  remote_attestation.rs
runner/: Cargo.toml
runner/src/: attestation.rs  main.rs  quoting.rs
service-provider/: Cargo.toml
service-provider/src/: attestation.rs  ias.rs  main.rs
utils/attestation_types/: Cargo.toml
utils/attestation_types/src/: lib.rs
utils/common/: Cargo.toml
utils/common/src/: lib.rs
utils/crypto/: Cargo.toml
utils/crypto/src/: ephemeral_diffie_hellman.rs  hash.rs  key_agreement.rs  key_derivation.rs  lib.rs  mac.rs  verification_key.rs
utils/types/: Cargo.toml
utils/types/src/: attestation_messages.rs  error.rs  lib.rs
