[package]
name = "client"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

[dependencies]
aesm-client = { version = "0.5", features = ["sgxs"] }
attestation-types = { path = "../utils/attestation_types" }
bincode = "1.2"
crypto = { path = "../utils/crypto" }
enclave-runner = "0.3"
hex = "0.4"
sgx-isa =  { version = "0.3.2", features = ["serde"] }
sgxs-loaders = "0.2.1"
