[package]
name = "crypto"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbedtls = { git = "https://github.com/niklasad1/rust-mbedtls", branch = "na-bump-bindgen", default-features = false, features = ["sgx"] }
