[package]
name = "enclave"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

[dependencies]
types = { path = "../utils/types" }
bincode = "1.2.1"
common = { path = "../utils/common" }
crypto = { path = "../utils/crypto" }
sgx-isa = { version = "0.3.2", features = ["sgxstd", "serde"] }
