[package]
name = "runner"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

[dependencies]
aesm-client = { version = "0.5", features = ["sgxs"] }
attestation-types = { path = "../attestation_types" }
bincode = "1.2"
enclave-runner = "0.3"
sgxs-loaders = "0.2.1"
crypto = { path = "../crypto" }
sgx-isa = "0.3.2"
hex = "0.4"
