[package]
name = "service-provider"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../utils/types" }
base64 = "0.12.1"
bincode = "1.2"
common = { path = "../utils/common" }
crypto = { path = "../utils/crypto" }
hex = "0.4"
hyper = "0.13"
hyper-rustls = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx-isa = { version = "0.3.2", features = ["serde"] }
percent-encoding = "2.1.0"
x509-parser = "0.7.0"
pem = "0.7.0"
tokio = { version = "0.2", features = ["full"] }
