[package]
name = "types"
version = "0.1.0"
authors = ["Niklas <niklasadolfsson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aesm-client = { version = "0.5.0", features = ["sgxs"] }
bincode = "1.2.1"
derive_more = "0.99.6"
fixed-hash = "0.6"
serde = { version = "1.0", features = ["serde_derive"] }
uint = "0.8.3"
